--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-채권 • 채무 확인서 (출력화면) 
 <div style="text-align: center">
   <strong
     ><span style="text-decoration: underline"
@@ -21,10 +20,10 @@
 <table style="height: 26px; width: 660px">
   <tbody>
     <tr>
-      <td id="agency_name_id" style="width: 53px"> </td>
-      <td style="width: 114px">대리점 대표 </td>
-      <td id="cust_ceo_name_id" style="width: 112.469px"> </td>
-      <td style="width: 332.531px">귀사와 계약을 체결 후 거래를 하면서</td>
+      <td id="agency_name_id" style="width: 67px"> </td>
+      <td style="width: 67px; text-align: justify">대리점 대표 </td>
+      <td id="cust_ceo_name_id" style="width: 78.9375px"> </td>
+      <td style="width: 385.062px">은귀사와 계약을 체결 후 거래를 하면서</td>
     </tr>
   </tbody>
 </table>
@@ -45,7 +44,7 @@
  1. 당 대리점이 얀마농기코리아㈜에 지급할 금액(채무)
 <table id="type_D" style="height: 57px" border="1" width="766">
   <tbody>
-    <tr id="tr_lv2_d">
+    <tr id="tr_lv2_d" style="background-color: #d9f7ca">
       <td style="width: 184.5px; text-align: center">
         <strong>표준적요</strong>
       </td>
@@ -53,7 +52,7 @@
       <td style="width: 184.5px; text-align: center"><strong>금액</strong></td>
       <td style="width: 184.5px; text-align: center"><strong>비고</strong></td>
     </tr>
-    <tr>
+    <tr style="background-color: #d9f7ca">
       <td style="width: 184.5px; text-align: center"><strong>합계</strong></td>
       <td style="width: 184.5px"> </td>
       <td
@@ -66,10 +65,10 @@
     </tr>
   </tbody>
 </table>
- 2. 당 대리점이 얀마농기코리아㈜로 부터 지급 받을 금액(채권)
+ <br />2. 당 대리점이 얀마농기코리아㈜로 부터 지급 받을 금액(채권)
 <table id="type_B" style="height: 61px" border="1" width="765">
   <tbody>
-    <tr id="tr_lv2_b">
+    <tr id="tr_lv2_b" style="background-color: #d9f7ca">
       <td style="width: 247.656px; text-align: center">
         <strong>표준적요</strong>
       </td>
@@ -83,7 +82,7 @@
         <strong>비고</strong>
       </td>
     </tr>
-    <tr>
+    <tr style="background-color: #d9f7ca">
       <td style="width: 247.656px; text-align: center">
         <strong>합계</strong>
       </td>
@@ -98,10 +97,10 @@
     </tr>
   </tbody>
 </table>
- 3. 당 대리점 채무 • 채권 계<br />
+<br /> 3. 당 대리점 채무 • 채권 계<br />
 <table style="height: 32px" border="1" width="766">
   <tbody>
-    <tr>
+    <tr style="background-color: #d9f7ca">
       <td style="width: 184.5px; text-align: center"><strong>구분</strong></td>
       <td style="width: 184.5px; text-align: center">
         <strong>표준적요</strong>
@@ -121,7 +120,7 @@
       <td id="grand_total_b" style="width: 184.5px; text-align: right"> </td>
       <td style="width: 184.5px; text-align: center">지급 대상액 계</td>
     </tr>
-    <tr>
+    <tr style="background-color: #d9f7ca">
       <td style="width: 184.5px; text-align: center"><strong>합계</strong></td>
       <td style="width: 184.5px"> </td>
       <td
@@ -134,10 +133,13 @@
     </tr>
   </tbody>
 </table>
-상기 1, 2, 3항의 내용이 이상 없을을 확인 합니다. <br />
+<br />
 <table style="height: 20px; width: 764px">
   <tbody>
     <tr>
+      <td style="width: 754px; text-align: left">
+        상기 1, 2, 3항의 내용이 이상 없을을 확인 합니다. 
+      </td>
       <td id="cur_day_id" style="width: 754px; text-align: right"> </td>
     </tr>
   </tbody>
@@ -145,7 +147,9 @@
 <table style="height: 24px; width: 763px">
   <tbody>
     <tr>
-      <td style="width: 565.812px; text-align: right">주 소</td>
+      <td style="width: 565.812px; text-align: right">
+        주                     소
+      </td>
       <td id="cust_address_id" style="width: 180.188px"> </td>
     </tr>
   </tbody>
@@ -153,18 +157,18 @@
 <table style="height: 30px; width: 761px">
   <tbody>
     <tr>
-      <td style="width: 558px; text-align: right">회사 또는 기관명</td>
-      <td style="width: 75.4844px; text-align: right">얀마농기계</td>
-      <td id="agency_name_id_last" style="width: 56.5156px"> </td>
-      <td style="width: 39px; text-align: right">대리점</td>
+      <td style="width: 551.703px; text-align: right">회사 또는 기관명</td>
+      <td style="width: 74.2969px; text-align: right">얀 마 농 기 계</td>
+      <td id="agency_name_id_last" style="width: 56px"> </td>
+      <td style="width: 39px; text-align: left">대리점</td>
     </tr>
   </tbody>
 </table>
 <table style="height: 19px; width: 760px">
   <tbody>
     <tr>
-      <td style="width: 642.328px; text-align: right">대  표  자  성  명</td>
-      <td id="cust_ceo_name_last" style="width: 99.6719px; text-align: right">
+      <td style="width: 559.406px; text-align: right">대   표  자  성  명</td>
+      <td id="cust_ceo_name_last" style="width: 175.594px; text-align: left">
          
       </td>
     </tr>
@@ -207,7 +211,11 @@
       <td id="region" style="width: 94px; height: 13px">
          <button id="ITEM000028069" class="setBtn ITEM000028069">지역</button> 
       </td>
-      <td style="width: 94px; height: 13px"> </td>
+      <td id="region_agency_name" style="width: 94px; height: 13px">
+         <button id="ITEM000028338" class="setBtn ITEM000028338">
+          region_agency_name</button
+        > 
+      </td>
       <td style="width: 94px; height: 13px"> </td>
       <td style="width: 94px; height: 13px"> </td>
     </tr>
