--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <table style="height: 21px; width: 519px">
   <tbody>
     <tr>
-      <td style="width: 226.031px">얀마농기코리아㈜ 대표 이사 귀하(대표:</td>
-      <td id="company_ceo_name_id" style="width: 272.969px; text-align: left">
+      <td id="company_ceo_name_id" style="width: 280.172px; text-align: left">
          
       </td>
     </tr>
@@ -19,11 +18,8 @@
 <br />
 <table style="height: 26px; width: 660px">
   <tbody>
-    <tr>
-      <td id="agency_name_id" style="width: 67px"> </td>
-      <td style="width: 67px; text-align: justify">대리점 대표 </td>
-      <td id="cust_ceo_name_id" style="width: 78.9375px"> </td>
-      <td style="width: 385.062px">은귀사와 계약을 체결 후 거래를 하면서</td>
+    <tr style="height: 16px">
+      <td id="agency_name_id" style="width: 67px; height: 16px"> </td>
     </tr>
   </tbody>
 </table>
@@ -31,9 +27,6 @@
   <tbody>
     <tr style="height: 15px">
       <td id="last_day_id" style="width: 71.0469px; height: 15px"> </td>
-      <td style="width: 432.953px; height: 15px">
-        현재 다음 내용과 같이 채권•채무 사실이 있음을 확인 합니다. 
-      </td>
     </tr>
   </tbody>
 </table>
@@ -109,10 +102,10 @@
       <td style="width: 184.5px; text-align: center"><strong>비고</strong></td>
     </tr>
     <tr>
-      <td style="width: 184.5px; text-align: center"> 채무</td>
+      <td style="width: 184.5px; text-align: center">채무</td>
       <td style="width: 184.5px"> </td>
       <td id="grand_total_d" style="width: 184.5px; text-align: right"> </td>
-      <td style="width: 184.5px; text-align: center"> 결제 대상액 계</td>
+      <td style="width: 184.5px; text-align: center">결제 대상액 계</td>
     </tr>
     <tr>
       <td style="width: 184.5px; text-align: center">채권</td>
@@ -148,7 +141,7 @@
   <tbody>
     <tr>
       <td style="width: 565.812px; text-align: right">
-        주                     소
+        주                     소:
       </td>
       <td id="cust_address_id" style="width: 180.188px"> </td>
     </tr>
@@ -157,17 +150,16 @@
 <table style="height: 30px; width: 761px">
   <tbody>
     <tr>
-      <td style="width: 551.703px; text-align: right">회사 또는 기관명</td>
-      <td style="width: 74.2969px; text-align: right">얀 마 농 기 계</td>
-      <td id="agency_name_id_last" style="width: 56px"> </td>
-      <td style="width: 39px; text-align: left">대리점</td>
+      <td style="width: 515px; text-align: right">회사 또는 기관명:</td>
+      <td style="width: 69.5156px; text-align: left">얀 마 농 기 계</td>
+      <td id="agency_name_id_last" style="width: 89.4844px"> </td>
     </tr>
   </tbody>
 </table>
 <table style="height: 19px; width: 760px">
   <tbody>
     <tr>
-      <td style="width: 559.406px; text-align: right">대   표  자  성  명</td>
+      <td style="width: 559.406px; text-align: right">대   표  자  성  명:</td>
       <td id="cust_ceo_name_last" style="width: 175.594px; text-align: left">
          
       </td>
